--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "quasar-app",
+  "name": "ArumaRoom",
   "version": "0.0.1",
-  "description": "A Quasar App",
-  "author": "Your Name",
+  "description": "Light Synthesizer",
+  "author": "Lloyd Kranzky",
+  "license": "Unlicense",
   "scripts": {
     "clean": "node build/script.clean.js",
     "dev": "node build/script.dev.js",
