--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "babel-runtime": "~6.23.0",
     "fastclick": "~1.0.6",
+    "howler": "^2.0.2",
+    "leapjs": "^0.6.4",
     "material-design-icons": "~3.0.1",
     "moment": "~2.17.1",
+    "pixi.js": "^4.4.0",
     "quasar-framework": "~0.13.1",
     "roboto-fontface": "~0.7.0",
     "vue": "~2.2.0",
