--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pixi.js": "^4.4.0",
     "quasar-framework": "~0.13.1",
     "roboto-fontface": "~0.7.0",
+    "socket.io-client": "^1.7.3",
     "vue": "~2.2.0",
     "vue-router": "~2.2.1"
   },
