debug view for inputs and actions

--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "babel-runtime": "~6.23.0",
     "fastclick": "~1.0.6",
-    "howler": "^2.0.2",
-    "leapjs": "^0.6.4",
+    "howler": "~2.0.2",
+    "leapjs": "~0.6.4",
     "material-design-icons": "~3.0.1",
     "moment": "~2.17.1",
-    "pixi-particles": "^2.1.5",
-    "pixi.js": "^4.4.0",
+    "pixi-particles": "~2.1.5",
+    "pixi.js": "~4.4.2",
     "quasar-framework": "~0.13.1",
     "roboto-fontface": "~0.7.0",
-    "socket.io-client": "^1.7.3",
+    "socket.io-client": "~1.7.3",
     "vue": "~2.2.4",
     "vue-router": "~2.3.0"
   },
@@ -60,7 +60,7 @@
     "stylus-loader": "~3.0.1",
     "url-loader": "~0.5.7",
     "vue-loader": "~11.1.0",
-    "vue-style-loader": "~2.0.0",
+    "vue-style-loader": "~2.0.4",
     "vue-template-compiler": "~2.2.4",
     "webpack": "~2.2.1",
     "webpack-dev-middleware": "~1.10.1",
