--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leapjs": "~0.6.4",
     "material-design-icons": "~3.0.1",
     "moment": "~2.18.1",
+    "pixi-display": "^1.1.1",
     "pixi-particles": "~2.1.5",
     "pixi.js": "~4.4.4",
     "quasar-framework": "~0.13.1",
@@ -42,7 +43,7 @@
     "eslint-loader": "~1.7.1",
     "eslint-plugin-html": "~2.0.1",
     "eslint-plugin-promise": "~3.5.0",
-    "eslint-plugin-standard": "~2.1.1",
+    "eslint-plugin-standard": "~2.2.0",
     "eventsource-polyfill": "~0.9.6",
     "express": "~4.15.2",
     "extract-text-webpack-plugin": "~2.1.0",
