--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "babel-runtime": "~6.23.0",
     "fastclick": "~1.0.6",
     "howler": "~2.0.2",
