--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "babel-runtime": "~6.23.0",
     "fastclick": "~1.0.6",
     "howler": "~2.0.2",
-    "howler-plugin-effect-chain": "^0.1.2",
     "leapjs": "~0.6.4",
     "material-design-icons": "~3.0.1",
     "moment": "~2.18.1",
     "pixi-display": "^1.1.1",
+    "pixi-filters": "^1.0.6",
     "pixi-particles": "~2.1.5",
     "pixi.js": "~4.4.4",
     "quasar-framework": "~0.13.1",
