video demo added

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.0",
     "babel-runtime": "~6.23.0",
     "fastclick": "~1.0.6",
+    "gumadapter": "^1.0.1",
     "howler": "~2.0.2",
     "leapjs": "~0.6.4",
     "material-design-icons": "~3.0.1",
@@ -23,6 +24,7 @@
     "pixi-particles": "~2.1.5",
     "pixi.js": "~4.4.4",
     "quasar-framework": "~0.13.1",
+    "recordrtc": "^5.4.1",
     "roboto-fontface": "~0.7.0",
     "socket.io-client": "~1.7.3",
     "vue": "~2.2.6",
