--- a/src/statics/config.json
+++ b/src/statics/config.json
@@ -11,11 +11,11 @@
   },
   "music": {
     "fade": 2000,
-    "url": "https://aruma.cervenka.space/music",
+    "url": "https://leap.dev/music",
     "connect": true
   },
   "video": {
-    "url": "https://aruma.cervenka.space/",
+    "url": "https://leap.dev/",
     "connect": true
   },
   "textures": {
@@ -26,7 +26,7 @@
   },
   "socket": {
     "rate": 10,
-    "url": "https://aruma.cervenka.space/socket.io",
+    "url": "https://leap.dev:6001",
     "connect": true
   },
   "planet": {
